--- a/css/style.css
+++ b/css/style.css
@@ -166,11 +166,12 @@ body {
 	padding-bottom: 50px;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	margin: -20px;
 }
 
 .card {
-	flex: 1 0 auto;
+	margin: 20px;
+	flex: 50%;
 	position: relative;
 	border-radius: 20px;
 	overflow: hidden;
@@ -237,6 +238,231 @@ body {
 	z-index: -2;
 	object-fit: cover;
 }
+
+
+.section-title {
+	font-weight: 500;
+	font-size: 32px;
+	line-height: 72%;
+	margin-top: 0;
+	margin-bottom: 47px;
+}
+
+.delivery-week {
+	padding: 100px 0;
+}
+
+.delivery-cards {
+	display: flex;
+	flex-wrap: wrap;
+	margin: -15px;
+}
+
+.delivery-card {
+	position: relative;
+	width: 275px;
+	height: 182px;
+	border-radius: 18px;
+	overflow: hidden;
+	margin: 15px;
+}
+
+.delivery-image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.delivery-tag {
+	position: absolute;
+	left: 10px;
+	top: 16px;
+	border-radius: 30px;
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 115%;
+	color: #49494F;
+	padding: 5px 10px;
+}
+
+.tag-health {
+	background: #D0FD89;
+}
+
+.tag-veg {
+	background: #AEBC41;
+}
+
+.tag-meat {
+	background: #B86B78;
+}
+
+.tag-chicken {
+	background: #D68334;
+}
+
+.tag-fish {
+	background: #CD6255;
+}
+
+.tag-kid {
+	background: #FFFDBF;
+}
+
+.tag-parent {
+	background: #F6FDC8;
+}
+
+.tag-holiday {
+	background: #FEF7FE;
+}
+
+.section-grey {
+	background: #F6F6F6;
+}
+
+.category {
+	padding: 40px 0px 60px;
+}
+
+.tabs {
+	display: flex;
+	margin: 0;
+	margin-bottom: 62px;
+	padding: 0;
+	list-style-type: none;
+}
+
+.tabs-link {
+	font-size: 20px;
+	line-height: 115%;
+	color: #49494F;
+	text-decoration: none;
+	margin-right: 58px;
+}
+
+.tabs-link.active {
+	color: #F37321;
+}
+
+.tabs-content {
+	display: flex;
+	justify-content: space-between;
+	margin: -18px;
+}
+
+.tabs-card-content {
+	padding: 23px;
+}
+
+.tabs-card {
+	margin: 18px;
+	max-width: 270px;
+	border-radius: 20px;
+	overflow: hidden;
+	background-color: #fff;
+	box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+}
+
+.tabs-image {
+	max-width: 100%;
+}
+
+.tabs-title {
+	margin: 0px 0px 13px 0px;
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 115%x;
+}
+
+.tabs-description {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 164%;
+	color: #B9B9BE;
+}
+
+.tabs-price {
+	font-weight: 500;
+	font-size: 23px;
+	line-height: 100%;
+	color: #4B4B51;
+	display: block;
+	margin-bottom: 5px;
+}
+
+.tabs-weight {
+	font-weight: 500;
+	font-size: 17px;
+	line-height: 118%;
+	color: #AAAAB1;
+}
+
+.tabs-info {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.button-outline {
+	background-color: transparent;
+	border: 2px solid #F37321;
+	border-radius: 33px;
+	color: #F37321;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 118%;
+	padding: 15px 25px;
+	cursor: pointer;
+}
+
+.button-center {
+	display: block;
+	margin: auto;
+	margin-top: 60px;
+	width: 315px;
+}
+
+
+
+
+.footer {
+	padding: 40px 0;
+	background: #F6F6F6;
+}
+
+.footer-wrapper {
+	display: flex;
+	align-items: center;
+}
+
+.footer-logo {
+	margin-right: 50px;
+}
+
+.footer-nav {
+	
+}
+
+.footer-link {
+	font-size: 16px;
+	line-height: 144%;
+	text-decoration-line: underline;
+	color: #000;
+	margin-right: 50px;
+}
+
+.social-links {
+	display: flex;
+	align-items: center;
+	margin-left: auto;
+}
+
+.social-link {
+	margin-left: 20px;
+	text-decoration: none;
+}
+
 
 
 
