--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body {
 	display: flex;
 	max-width: 620px;
 	flex-grow: 1;
+/*	width: 100%;*/
 	position: relative;
 }
 
@@ -98,7 +99,26 @@ body {
 }
 
 .slide-content {
-	max-width: 400px;
+	max-width: 500px;
+	position: relative;
+}
+
+.slider-buttons {
+	position: absolute;
+	right: 46px;
+	bottom: 40px;
+	z-index: 9;
+	display: flex;
+	align-items: center;
+	width: 100px;
+	justify-content: space-between;
+}
+
+.slider-button {
+	cursor: pointer;
+}
+
+.swiper{
 	position: relative;
 }
 
@@ -275,7 +295,7 @@ body {
 
 .delivery-tag {
 	position: absolute;
-	left: 10px;
+	left: 16px;
 	top: 16px;
 	border-radius: 30px;
 	font-weight: 500;
@@ -463,12 +483,104 @@ body {
 	text-decoration: none;
 }
 
+@media (max-width: 1260px) {
+	
+	.container {
+		max-width: 960px;
+	}
+	
+	.search-form {
+		margin: 0 40px;
+	}
+	
+	.tabs-content {
+		flex-wrap: wrap;
+	}
+	
+	.tabs-card {
+		flex: 50%;
+		max-width: calc(50% - 36px);
+	}
+	
+}
 
+@media (max-width: 992px) {
+	
+	.container {
+		max-width: 760px;
+	}
+	
+	.slide {
+		padding: 60px;
+	}
+	
+	.delivery-card {
+		width: calc(50% - 30px);
+	}
+	
+	.footer-logo {
+		margin-right: 40px;
+	}
+}
 
+@media (max-width: 768px) {
+	.container {
+		max-width: 560px;
+	}
+	
+	.header {
+		flex-wrap: wrap;
+	}
+	
+	.search-form {
+		order: 5;
+		margin: 15px 0;
+		width: 100%;
+	}
+	
+	.promo {
+		flex-wrap: wrap;
+	}
+}
 
-
-
-
+@media (max-width: 610px) {
+	
+	.container {
+		max-width: 90%;
+	}
+	
+	.tabs-card {
+		max-width: 100%;
+	}
+	
+	.delivery-card {
+		width: 100%;
+		height: 100%;
+	}
+	
+	.delivery-tag {
+		font-size: 30px;
+		padding: 10px 15px;
+	}
+	
+	.footer-wrapper {
+		flex-wrap: wrap;
+	}
+	
+	.footer-nav {
+		order: 5;
+		margin-top: 20px;
+		justify-content: center;
+		flex-grow: 1;
+		display: flex;
+		justify-content: space-evenly;
+	}
+	
+	.footer-nav > * {
+		margin-right: 0;
+	}
+	
+}
 
 
 
